--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,6 @@ html,
 body,
 #root {
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
@@ -13,13 +12,18 @@ body,
   overflow: hidden;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 // Styles for app container
 .app-body {
-  height: 100%;
-  max-width: 900px;
   margin: 0 auto;
   padding: 1rem;
   display: flex;
+  width: 800px;
 }
 
 #view {
